<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/AddTaskk"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Addtask">

    <EditText
        android:id="@+id/savetilte"
        android:layout_width="257dp"
        android:layout_height="76dp"
        android:ems="10"
        android:hint="task title"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/savebody"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        tools:ignore="MissingConstraints" />

    <EditText
        android:id="@+id/savebody"
        android:layout_width="244dp"
        android:layout_height="67dp"
        android:ems="10"
        android:hint="Task body"
        android:inputType="text"
        app:layout_constraintBottom_toTopOf="@+id/spinner"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/savetilte"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_task"
        android:textSize="24sp"
        app:layout_constraintBottom_toTopOf="@+id/savetilte"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_chainStyle="packed" />

    <Button
        android:id="@+id/saveone"
        android:layout_width="105dp"
        android:layout_height="63dp"
        android:text="Save"
        android:textColorHighlight="#4CAF50"
        android:textColorHint="#4CAF50"
        android:textColorLink="#DA5151"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/addimage"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner2"
        app:layout_constraintVertical_bias="0.5"
        tools:ignore="MissingConstraints" />

    <Spinner
        android:id="@+id/spinner"
        android:layout_width="324dp"
        android:layout_height="71dp"
        app:layout_constraintBottom_toTopOf="@+id/whichteam"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/savebody" />

    <Spinner
        android:id="@+id/spinner2"
        android:layout_width="319dp"
        android:layout_height="70dp"
        app:layout_constraintBottom_toTopOf="@+id/saveone"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/whichteam" />

    <TextView
        android:id="@+id/whichteam"
        android:layout_width="130dp"
        android:layout_height="42dp"
        android:text="which team"
        android:textColor="#44F85B"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/spinner2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinner" />

    <Button
        android:id="@+id/addimage"
        android:layout_width="127dp"
        android:layout_height="64dp"
        android:backgroundTint="#BF1D1D"
        android:text="Add image"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toEndOf="@+id/saveone"
        app:layout_constraintTop_toBottomOf="@+id/spinner2"
        app:layout_constraintVertical_bias="0.5" />

    <ImageView
        android:id="@+id/editProductAddImageButton"
        android:layout_width="200px"
        android:layout_height="200px"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/addimage"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/saveone"
        tools:srcCompat="@tools:sample/avatars" />

</androidx.constraintlayout.widget.ConstraintLayout>