<resources>
    <string name="app_name">taskmaster</string>
    <string name="add_task">ADD TASK</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="ahmad_anshasi">Ahmad Anshasi</string>
    <string name="setting">setting</string>
    <string name="all_tasks">All Tasks</string>
</resources>